# astroberry-server-sysmod

./: CMakeLists.txt  README.md
debian/: changelog  config  control  copyright  postinst  postrm  preinst  prerm  rules  templates
files/: HotSpot.nmconnection  astroberry-icons  astroberry-init.sh  astroberry-server-wiz.desktop  libfm.conf.astroberry  openbox-lxde-astroberry  smb.conf.astroberry  startlxde-astroberry  usr.sbin.gpsd  wifi-enable-autohotspot.conf  wifi-powersave-off.conf
files/lxpanel/LXDE-astroberry/panels/: panel
files/lxsession/LXDE-astroberry/: autostart  desktop.conf
files/pcmanfm/LXDE-astroberry/: desktop-items-0.conf
