cmake_minimum_required(VERSION 2.8)
PROJECT(astroberry-server-sysmod NONE)

set (VERSION_MAJOR 2)
set (VERSION_MINOR 0)
set (VERSION_RELEASE 0)

set(BIN_INSTALL_DIR "/usr/bin")
set(CONFIG_INSTALL_DIR "/etc")
set(NM_CONFIG_DIR "/etc/NetworkManager")

if (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
        install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/files/startlxde-astroberry DESTINATION ${BIN_INSTALL_DIR})
	install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/files/openbox-lxde-astroberry DESTINATION ${BIN_INSTALL_DIR})
        install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/files/lxde-astroberry-rc.xml DESTINATION ${CONFIG_INSTALL_DIR}/xdg/openbox)
	install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/files/lxde-astroberry-applications.menu DESTINATION ${CONFIG_INSTALL_DIR}/xdg/menus)
        install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/files/lxpanel/LXDE-astroberry DESTINATION ${CONFIG_INSTALL_DIR}/xdg/lxpanel)
        install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/files/lxsession/LXDE-astroberry DESTINATION ${CONFIG_INSTALL_DIR}/xdg/lxsession)
        install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/files/pcmanfm/LXDE-astroberry DESTINATION ${CONFIG_INSTALL_DIR}/xdg/pcmanfm)
        install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/files/wifi-powersave-off.conf DESTINATION ${NM_CONFIG_DIR}/conf.d)
        install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/files/wifi-enable-autohotspot.conf DESTINATION ${NM_CONFIG_DIR}/conf.d)
endif()
